# NoderaMC

./: .gitignore  AGENTS.md  COMPATIBILITY.md  README.md  Readme.md  Tested.md  build.gradle.kts  gradle.properties  install.sh  settings.gradle.kts
.github/: ISSUE_SYSTEM.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: build.yml  e2e-live.yml  release-latest.yml
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: nodera.java-library.gradle.kts  nodera.neoforge-mod.gradle.kts
committee/: build.gradle.kts
committee/src/main/java/dev/nodera/committee/: CommitteeFailover.java  CommitteeMember.java  CommitteeSession.java  MemberBallot.java  VotePersistence.java
committee/src/test/java/dev/nodera/committee/: ByzantineWorkerTest.java  (+2 more)
distribution/: build.gradle.kts
docs/: LEGACY.md  LIMITATIONS.fixed.md  LIMITATIONS.md  MONOREPO.md  PROGRESS.md  Plan.0.md  Plan.1.md  Plan.2.md  Plan.3.md  Plan.md  Prompt.base.md  Roadmap.md  Task.0.md  Task.1.md  Task.10.md  Task.13.md  Task.14.md  Task.15.md  Task.16.md  Task.18.md  Task.19.md  Task.2.md  Task.20.md  Task.21.md  Task.22.md  Task.23.md  Task.24.md  Task.25.md  Task.26.md  Task.27.md  Task.28.md  Task.3.md  Task.31.md  Task.32.md  Task.4.md  Task.5.md  Task.6.md  Task.7.md  Task.9.md  Testing.Live.md
docs/Context/: Readme.md
docs/Context/docs/MultiPaper/: 01-overview.md  02-build-system.md  03-master-server.md  09-file-sync.md  README.md
docs/Context/docs/folia/: 01-overview.md  02-build-system.md  03-region-logic.md  08-global-region.md  09-plugin-compatibility.md  10-configuration.md  12-key-classes.md  13-data-flow.md  README.md
docs/minecraft/MultiPaper/: 04-messaging-protocol.md  05-chunk-sync.md  06-peer-to-peer.md  07-entity-player-sync.md  08-redstone-safety.md  10-proxy-load-balancing.md  11-configuration.md  12-key-classes.md  13-plugin-development.md
docs/minecraft/folia/: 04-no-main-thread.md  05-regionized-data.md  06-schedulers.md  07-thread-context.md  11-diagnostics.md
docs/old/: Prompt.base.md  Task.0.md  Task.1.md  Task.10.md  Task.11.md  Task.12.md  Task.19.md  Task.2.md  Task.20.md  Task.21.md  Task.23.md  Task.24.md  Task.29.md  Task.30.md  Task.32.md  Task.33.md  Task.4.md  Task.6.md  Task.7.md  Task.8.md
docs/torrent/: rendezvous.md  trackers.md
fallback/: build.gradle.kts
gradle/: libs.versions.toml
java/build-logic/: build.gradle.kts  settings.gradle.kts
java/build-logic/src/main/kotlin/: nodera.java-library.gradle.kts  nodera.neoforge-mod.gradle.kts
java/committee/: build.gradle.kts
java/coordinator/: build.gradle.kts
java/core/: build.gradle.kts
java/diagnostics/: build.gradle.kts
java/distribution/: build.gradle.kts
java/engine/: build.gradle.kts
java/neoforge-mod/: build.gradle.kts  gradle.properties
java/neoforge-mod/src/main/resources/: nodera.mixins.json
java/nodera-headless/: build.gradle.kts
java/peer/: build.gradle.kts
java/peer-runtime/: build.gradle.kts
java/protocol/: build.gradle.kts
java/shadow-validation/: build.gradle.kts
java/storage/: build.gradle.kts
java/storage-api/: build.gradle.kts
java/testing/: build.gradle.kts
java/testkit/: build.gradle.kts
java/transport/: build.gradle.kts
java/transport-api/: build.gradle.kts
java/transport-rendezvous/: build.gradle.kts
neoforge-mod/: build.gradle.kts
neoforge-mod/src/main/resources/: nodera.mixins.json
peer-runtime/: build.gradle.kts
rust/: Cargo.toml  rust-toolchain.toml
rust/nodera-app/: .gitignore  Cargo.toml  README.md  tauri.conf.json
rust/nodera-app/src/: control.rs  daemon.rs  logs.rs  main.rs  metrics.rs  system.rs
rust/nodera-app/ui/: index.html  package.json  vite.config.ts
rust/nodera-app/ui/src/: App.tsx  ipc.ts  styles.css
rust/nodera-codec/: Cargo.toml
rust/nodera-codec/src/: framing.rs  lib.rs  messages.rs  reader.rs  rendezvous.rs  sig.rs  tags.rs  types.rs  writer.rs
rust/nodera-codec/tests/: fixtures.rs  tag_mirror.rs
rust/nodera-rendezvous/: Cargo.toml
rust/nodera-rendezvous/src/: circuit.rs  config.rs  discover.rs  limits.rs  main.rs  punch.rs  register.rs  registry.rs  reservation.rs  service.rs  test_support.rs  wire.rs
rust/nodera-tracker/: Cargo.toml
rust/nodera-tracker/src/: announce.rs  config.rs  health.rs  limits.rs  main.rs  query.rs  registry.rs  service.rs  test_support.rs  wire.rs
scripts/: README.md  build-all.sh  build.sh  dev.sh  e2e-churn.sh  e2e-continuity.sh  e2e-ownership.sh  e2e-pickup.sh  env.sh  play-two.sh  setup-server.sh  start-server.sh
simulation/: build.gradle.kts
storage-api/: build.gradle.kts
storage-client/: build.gradle.kts
storage-eventsourced/: build.gradle.kts
storage-rocksdb/: build.gradle.kts
transport-neoforge/: build.gradle.kts
transport-socket/: build.gradle.kts
(+874 files in other folders)
