[workspace]
resolver = "2"
members = ["nodera-codec", "nodera-tracker", "nodera-rendezvous"]
# nodera-app (Task 32) is the Tauri companion app. It is EXCLUDED from the workspace build/test gate
# on purpose: Tauri pulls heavy per-OS native deps (webkit2gtk/webview) that are not part of the
# headless CI toolchain, so `cargo test`/`cargo build --workspace` must not try to compile it. Build
# it separately with its own toolchain (`cd nodera-app && cargo tauri dev|build`). See its README.
exclude = ["nodera-app"]

# Dependency versions are pinned here for the whole workspace — the Rust mirror of the
# `gradle/libs.versions.toml` version-catalog discipline (Task 0 §3). Bumps are single dedicated
# commits, never mixed into a feature task.
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
publish = false

[workspace.dependencies]
nodera-codec = { path = "nodera-codec" }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"

[profile.release]
lto = "thin"
strip = true
