[package]
name = "nodera-codec"
description = "Byte-exact Rust port of Nodera's frozen canonical encoding (Task 27)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
