[package]
name = "nodera-tracker"
description = "Standalone Nodera tracker service (Task 28)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nodera-codec = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
